[package]
name = "openlive"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openlive"
path = "src/main.rs"


[workspace]
members = [".", "entity","migration" ]

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["http2", "macros", "multipart", "ws"] }
 
dotenv = "0.15.0"
log = "0.4.28"
sea-orm = { version = "1.1.16", features = ["sqlx-postgres","runtime-tokio-rustls"] }
serde = {version = "1.0.219",features = ["derive"]}
serde_json = { version = "1.0.143"  }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
migration = { path = "migration" }
entity={path = "entity"}

# cargo watch -c -w src -x run^C