[package]
name = "openlive"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openlive"
path = "src/main.rs"


[workspace]
members = [".", "entity","migration" ]

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["http2", "macros", "multipart", "ws"] }
 
dotenv = "0.15.0"
log = "0.4.28"
sea-orm = { version = "1.1.16", features = ["sqlx-postgres","runtime-tokio-rustls"] }
serde = {version = "1.0.219",features = ["derive"]}
serde_json = { version = "1.0.145"  }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
migration = { path = "migration" }
entity={path = "entity"}
socketioxide = "0.17.2"
once_cell = "1.21.3"

tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
http-body = "1.0.1"
# hyper = { version = "1.7.0", features = ["full"] }
futures-util = "0.3.31"
dashmap = "6.1.0"
argon2 = "0.5.3"
chrono = "0.4.42"
jsonwebtoken = "9.3.1"
dotenvy_macro = "0.15.7"
async-graphql = { version = "7.0.17", features = ["dataloader", "chrono"] }
async-graphql-axum = "7.0.17"

uuid = { version = "1.18.1", features = ["serde", "v4"] }

async-trait = "0.1.89"
tokio-stream = "0.1.17"


# cargo watch -c -w src -x run^C